E2E color contrast test + fixes

--- a/src/shared/styles/variables/color-schemes.css
+++ b/src/shared/styles/variables/color-schemes.css
@@ -78,7 +78,7 @@
 	--v-popover-fg: hsl(216deg 16% 8%);
 	--v-tooltip-bg: hsl(216deg 16% 8%);
 	--v-tooltip-fg: hsl(0deg 0% 98%);
-	--v-tooltip-danger: hsl(30deg 100% 75%);
+	--v-tooltip-danger: hsl(30deg 100% 80%);
 	--v-tooltip-muted: hsl(30deg 7% 82.5%);
 	--v-primary-bg: hsl(195deg 100% 20%);
 	--v-primary-fg: hsl(30deg 100% 96%);
